# curses4j

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-macos.sh  build.bat  build.sh  pom.xml
.circleci/: config.yml
src/main/java/io/webfolder/curses4j/: Curses.java  CursesWindow.java  Window.java
src/main/java/io/webfolder/pdcurses4j/: PDCWindow.java  PDCursesLibrary.java  Window.java
src/main/native/: Makefile.vc  curses4j.c  libobjs.mif  pdcurses4j.c
src/test/java/io/webfolder/curses4j/: HelloWorld.java
src/test/java/io/webfolder/curses4j/chapter00/: HelloWorld.java
src/test/java/io/webfolder/curses4j/chapter01/: Goodbye.java
src/test/java/io/webfolder/curses4j/chapter02/: Add.java  Add1.java  Add3.java  Sushi.java  Typewriter.java  Yoda.java  Yourname.java
src/test/java/io/webfolder/curses4j/chapter03/: Annoy.java  Bgcolor.java  Bgcolor1.java  Colorful.java  Colortest.java  Notice.java  Pink.java  Twinkle.java  Yellowred.java
src/test/java/io/webfolder/curses4j/chapter04/: Abox.java  Acslist.java  Acsstring.java  Addchstr.java  Attrtest.java  Boxarray.java  Changechar.java  Charattrib.java  Chtypestring.java  Pi.java  Ustring.java
src/test/java/io/webfolder/curses4j/chapter05/: Corners.java  Ctitle.java  Screensize.java  Stdscrsize.java  Whereami.java
src/test/java/io/webfolder/pdcurses4j/: Background.java  HelloWorld.java  Scroll.java  TextColor.java  clear.java  delch.java  e12_03_scrollsub.java  echo.java  getparyx.java  getstr.java  kid1.java  kid2.java  typeahead.java  unctrl.java  waddch.java
(+81 files in other folders)
